Drivers/Linux/Development_Files/libusb/QuickUsbDiag/QuickUsb.h

// QuickUSB settings (wIndex values for QUICKUSB_SETTING
#define SETTING_WORDWIDE      1           // *wbuf = 1 is 16 bit transfers, 0 is 8 bits
/*- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  External function declarations
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -*/
// General purpose calls
extern int WINAPI QuickUsbFindModules(char *nameList,
                                     unsigned long length);
extern int WINAPI QuickUsbOpen(HANDLE *hDevice, 
			       char *deviceName);
extern int WINAPI QuickUsbClose(HANDLE hDevice);
extern int WINAPI QuickUsbReadSetting(HANDLE hDevice, 
                                      unsigned short address, 
                                      unsigned short *value);
extern int WINAPI QuickUsbWriteSetting(HANDLE hDevice,
                                       unsigned short address, 
                                       unsigned short value);
extern int WINAPI QuickUsbReadCommand(HANDLE hDevice, 
                                      unsigned short address, 
                                      unsigned char *data, 
                                      unsigned short *length);
extern int WINAPI QuickUsbWriteCommand(HANDLE hDevice, 
                                       unsigned short address, 
                                       unsigned char *data, 
                                       unsigned short length);
extern int WINAPI QuickUsbReadSpi(HANDLE hDevice, 
                                  unsigned char portNum,
                                  unsigned char *data, 
                                  unsigned short *length);
extern int WINAPI QuickUsbWriteSpi(HANDLE hDevice, 
                                   unsigned char portNum,
                                   unsigned char *data, 
                                   unsigned short length);
extern int WINAPI QuickUsbWriteReadSpi(HANDLE hDevice, 
                                       unsigned char portNum, 
                                       unsigned char *data, 
                                       unsigned short length);
extern int WINAPI QuickUsbReadI2C(HANDLE hDevice, 
                                  unsigned short address, 
                                  unsigned char *data, 
                                  unsigned short *length);
extern int WINAPI QuickUsbWriteI2C(HANDLE hDevice, 
                                   unsigned short address, 
                                   unsigned char *data,
                                   unsigned short length);
extern int WINAPI QuickUsbReadTimerReg(HANDLE hDevice, 
                                       unsigned short address, 
                                       unsigned short *data);
extern int WINAPI QuickUsbWriteTimerReg(HANDLE hDevice, 
                                        unsigned short address, 
                                        unsigned short data);
extern int WINAPI QuickUsbReadTimerIsrRegs(HANDLE hDevice, 
                                           unsigned short *data, 
                                           unsigned short *length);