Software/QuickUsbPwmEncode/QuickUSB.bas


'=============================================================================
' QuickUSB SPI Port Functions
'=============================================================================
Declare Function QuickUsbReadSpi Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte, Data As Any, ByRef length As Integer) As Long
Declare Function QuickUsbWriteSpi Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte, Data As Any, ByVal length As Integer) As Long
Declare Function QuickUsbWriteReadSpi Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte, Data As Any, ByVal length As Integer) As Long


'=============================================================================
' QuickUSB I2C Port Functions
'=============================================================================
Declare Function QuickUsbReadI2C Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByRef length As Integer) As Long
Declare Function QuickUsbWriteI2C Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByVal length As Integer) As Long

'=============================================================================
' QuickUSB Timer Functions
'=============================================================================
Declare Function QuickUsbReadTimerReg Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, ByRef Value As Integer) As Long
Declare Function QuickUsbWriteTimerReg Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, ByVal Value As Integer) As Long
Declare Function QuickUsbReadTimerIsrRegs Lib "QuickUsb" _
   (ByVal hDevice As Long, Data As Any, ByRef length As Integer) As Long


'=============================================================================
' General Purpose Functions
'=============================================================================
Public Function Min(X As Variant, Y As Variant) As Variant
   If (X < Y) Then
      Min = X
   Else
      Min = Y
   End If
End Function


Public Function Max(X As Variant, Y As Variant) As Variant
   If (X > Y) Then
      Max = X
   Else
      Max = Y
   End If
End Function


Public Function Align(length As Variant, blockSize As Variant) As Variant
   If (length Mod blockSize = 0) Then
      Align = length
   Else
      Align = length + (length Mod blockSize)
   End If
End Function



Public Function asHex(theData As Variant, length As Variant) As String
   Const digits As String = "0123456789ABCDEF"
   Dim pow2 As Variant
   Dim digit As Variant
   Dim tempStr As String
      
   pow2 = Array( _
      &H1, &H2, &H4, &H8, _
      &H10, &H20, &H40, &H80, _
      &H100, &H200, &H400, &H800, _
      &H1000, &H2000, &H4000, &H8000, _
      &H10000, &H20000, &H40000, &H80000, _
      &H100000, &H200000, &H400000, &H800000 _
   )
   For digit = length - 1 To 0 Step -1
      tempStr = tempStr & Mid(digits, ((theData \ pow2(digit * 4)) And &HF) + 1, 1)
   Next
   asHex = tempStr
End Function



Function ByteArrayToString(theData() As Byte) As String
   Dim count As Integer
   Dim theString As String
   
   For count = 0 To UBound(theData) - 1
      theString = theString & "&h" & asHex(theData(count), 2) & " "
   Next
   ByteArrayToString = theString
End Function



Function StringToByteArray(theData() As Byte, theString As String) As Integer
   Dim dataIndex As Integer
   Dim startStrIndex As Long
   Dim endStrIndex As Integer
   Dim strLen As Integer
   
   ' Exit for an empty string
   If (Len(theString) = 0) Then
      StringToByteArray = 0
      Exit Function
   End If
   
   ' Allocate space for the data
   ReDim theData(Len(theString))         ' Guess that the data length is the maximum
   
   ' Parse text and put it into the array
   dataIndex = 0
   startStrIndex = 1
   strLen = Len(theString)
   Do While (startStrIndex <= strLen)
      ' Find the first non-space
      Do While (Mid(theString, startStrIndex, 1) = " " And startStrIndex <= strLen)
         startStrIndex = startStrIndex + 1
      Loop
      
      ' Find the first space
      endStrIndex = startStrIndex
      Do While (Mid(theString, endStrIndex, 1) <> " " And endStrIndex <= strLen)
         endStrIndex = endStrIndex + 1
      Loop
      
      ' Get the text
      theData(dataIndex) = CByte(Val(Mid(theString, startStrIndex, endStrIndex - startStrIndex)) And &HFF)
      dataIndex = dataIndex + 1
      startStrIndex = endStrIndex
   Loop
   
   ' Resize the data to the right length
   ReDim Preserve theData(dataIndex - 1)
   
   ' Return the actual length
   StringToByteArray = dataIndex
End Function



Function InitInpOut()
   ' Initialize the InpOut Module to find and use the first available
   ' QuickUSb module
   Dim hDevice As Long
   Dim result As Long
   Dim devList As String
   
   ' Get the list of modules
   devList = Space(128)
   result = QuickUsbFindModules(devList, 128)
   If (devList = "") Then
      MsgBox "Cannot find any QuickUSB Modules", , "InpOut:InitInpOut"
      InitInpOut = False
      Return
   End If
   
   ' Extract the first device name from the list
   devName = Mid(devList, 1, InStr(1, devList, Chr(0), vbBinaryCompare) - 1)
   
   ' Open the device
   result = QuickUsbOpen(hDevice, devName)
   If (result = 0) Then
      MsgBox "Cannot open device:" & devName, , "InpOut:InitInpOut"
      InitInpOut = False
      Exit Function
   End If
   
   ' Tell the device to run in byte mode only
   result = QuickUsbWriteSetting(hDevice, SETTING_WORDWIDE, 0)
   
   ' Close the device when you're done
   QuickUsbClose hDevice
   
   ' Check the result
   If (result = 0) Then
      MsgBox "Cannot write WORDWIDE setting", , "InpOut:InitInpOut"
      InitInpOut = False
      Exit Function
   End If
   
   InitInpOut = True
End Function



Sub SetInpOutDevName(theDevName As String)
' Explicitly sets the device name of the QuickUsb module to use
   devName = theDevName
End Sub



Function Inp(ByVal address As Integer)
' Use this function just like the Qbasic Inp function
' address - The address to read from
   Dim result As Long
   Dim hDevice As Long
   Dim theData As Byte
   
   ' Check devName
   If (devName = "") Then
      MsgBox "Invalid device name", , "InpOut:Inp"
      Inp = -1
      Exit Function
   End If
   
   ' Open the device
   result = QuickUsbOpen(hDevice, devName)
   If (result = 0) Then
      MsgBox "Cannot open device:" & devName, , "InpOut:Inp"
      Inp = -1
      Exit Function
   End If
   
   ' Read the data
   result = QuickUsbReadCommand(hDevice, address, theData, 1)
   
   ' Close the device when you're done
   QuickUsbClose hDevice
   
   ' Check the transaction result
   If (result = 0) Then
      MsgBox "Inp failed", , "InpOut:Inp"
      Inp = -1
      Exit Function
   End If
   
   Inp = theData
End Function



Sub Out(ByVal address As Integer, ByVal theData As Integer)
   ' Use this function just like the Qbasic Out function
   ' address - The address to write to
   ' theData - the Byte to write
   Dim result As Long
   Dim hDevice As Long
      
   ' Open the device
   result = QuickUsbOpen(hDevice, devName)
   If (result = 0) Then
      MsgBox "Cannot open device:" & devName, , "InpOut:Out"
      Exit Sub
   End If
   
   ' Write the data
   result = QuickUsbWriteCommand(hDevice, address, theData, 1)
   
   ' Close the device when you're done
   QuickUsbClose hDevice
   
   ' Check the transaction result
   If (result = 0) Then
      MsgBox "Out failed", , "InpOut:Out"
      Exit Sub
   End If
   
End Sub



Sub InString(str As String, ByRef length As Long)
   ' Use this function to read a string from the QuickUSB module
   ' str - The string to read into
   ' length - the number of characters (bytes) to read
   ' Returns the number of bytes read in length
   Dim result As Long
   Dim hDevice As Long
      
   ' Open the device
   result = QuickUsbOpen(hDevice, devName)
   If (result = 0) Then
      MsgBox "Cannot open device:" & devName, , "QuickUSB: InString"
      Exit Sub
   End If
   
   ' Allocate and fill the string with NULLs
   str = String(length, Chr(0))
   
   ' Read the data
   result = QuickUsbReadDataString(hDevice, str, length)
   
   ' Close the device when you're done
   QuickUsbClose hDevice
   
   ' Check the transaction result
   If (result = 0) Then
      MsgBox "InString failed", , "QuickUSB: InString"
      Exit Sub
   End If
End Sub



Sub OutString(str As String, ByVal length As Long)
   ' Use this function to write a string to the QuickUSB module
   ' str - The string to write to
   ' length - the number of characters (bytes) to write
   Dim result As Long
   Dim hDevice As Long
      
   ' Open the device
   result = QuickUsbOpen(hDevice, devName)
   If (result = 0) Then
      MsgBox "Cannot open device:" & devName, , "QuickUSB: OutString"
      Exit Sub
   End If
   
   ' Write the data
   result = QuickUsbWriteDataString(hDevice, str, length)
   
   ' Close the device when you're done
   QuickUsbClose hDevice
   
   ' Check the transaction result
   If (result = 0) Then
      MsgBox "InString failed", , "QuickUSB: OutString"
      Exit Sub
   End If
End Sub



Public Sub WriteSetting(devName As String, settingNum As Integer, theValue As Integer)
   Dim hDevice As Long
   Dim result As Long
   
   ' Open the device
   result = QuickUsbOpen(hDevice, devName)
   If (result = 0) Then
      MsgBox "Cannot open Device:" & devName
      Exit Sub
   End If
   
   result = QuickUsbWriteSetting(hDevice, settingNum, theValue)

   ' Close the device when you're done
   QuickUsbClose hDevice
   
   ' Check the transaction result
   If (result = 0) Then
      MsgBox "Cannot write setting"
      Exit Sub
   End If
   
End Sub



Public Sub ReadSetting(devName As String, settingNum As Integer, ByRef theValue As Integer)
   Dim hDevice As Long
   Dim result As Long
   
   ' Open the device
   result = QuickUsbOpen(hDevice, devName)
   If (result = 0) Then
      MsgBox "Cannot open Device:" & devName
      Exit Sub
   End If
   
   result = QuickUsbReadSetting(hDevice, settingNum, theValue)

   ' Close the device when you're done
   QuickUsbClose hDevice
   
   ' Check the transaction result
   If (result = 0) Then
      MsgBox "Cannot write setting"
      Exit Sub
   End If
   
End Sub




